rename the file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="portfolio-resources/images/logo.png"
-    />
+    <link rel="icon" type="image/x-icon" href="assets/images/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -50,7 +46,7 @@
         </div>
         <div class="banner-image">
           <img
-            src="/portfolio-resources/images/sakib.png"
+            src="/assets/images/sakib.png"
             alt="Portfolio Image"
             class="banner-profile"
           />
@@ -100,7 +96,7 @@
         <div class="skill-container">
           <!-- .skill*4>img+h4.skill-title+p.skill-description -->
           <div class="skill">
-            <img src="portfolio-resources/images/icons/js.png" alt="JS" />
+            <img src="assets/images/icons/js.png" alt="JS" />
             <h4 class="skill-title">Vanilla JavaScript</h4>
             <div class="p skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -109,7 +105,7 @@
             </div>
           </div>
           <div class="skill">
-            <img src="portfolio-resources/images/icons/react.png" alt="React" />
+            <img src="assets/images/icons/react.png" alt="React" />
             <h4 class="skill-title">React</h4>
             <div class="p skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -118,7 +114,7 @@
             </div>
           </div>
           <div class="skill">
-            <img src="portfolio-resources/images/icons/nodejs.png" alt="" />
+            <img src="assets/images/icons/nodejs.png" alt="" />
             <h4 class="skill-title">Node.js</h4>
             <div class="p skill-description">
               List skill/technologies here. You can change the icon above to any
@@ -127,7 +123,7 @@
             </div>
           </div>
           <div class="skill">
-            <img src="portfolio-resources/images/icons/mongo.png" alt="" />
+            <img src="assets/images/icons/mongo.png" alt="" />
             <h4 class="skill-title">MongoDB</h4>
             <div class="p skill-description">
               List skill/technologies here. You can change the icon above to any
