made about section responsive

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section class="about bg-secoundary hide">
+      <section class="about bg-secoundary">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">
           I, m a designer & developer with a passion for web design. I enjoy
@@ -135,7 +135,7 @@
       </section>
       <!-- About Section ends here  -->
       <!-- Summery Of my Resume Section Starts Here  -->
-      <section class="resume hide">
+      <section class="resume">
         <h3 class="section-title center">A summary of My Resume</h3>
         <div class="resume-container">
           <div class="resume-column">
@@ -222,7 +222,7 @@
         </div>
       </section>
     </main>
-    <footer class="bg-secoundary hide">
+    <footer class="bg-secoundary">
       <div class="footer-column">
         <h3 class="section-title">Lets Connect</h3>
         <p>
