made mobile responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body class="open-sans-normal">
-    <header class="header hide">
+    <header class="header">
       <nav>
         <h3 class="nav-title">SH<span class="clr">A</span>KIB</h3>
         <ul>
